# DictPyMap

./: .flake8  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yaml
dictpymap/: __init__.py  exceptions.py  functions.py  main.py
src/dictpymap/: __init__.py  functions.py  main.py
tests/: test_functions.py  test_main.py
