[metadata]
name = DictPyMap
version = attr: dictpymap.__version__ 
url = https://github.com/Kalmis/DictPyMap
license = MIT
author = Kimi Päivärinta
maintainer_email = dictpymap@kimin.info
description = A simple library for parsing dictionaries to better format.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src
